--- a/style.css
+++ b/style.css
@@ -192,3 +192,7 @@ body {
   padding-left: 25px;
   background-image: url("img/icon-phone-footer.svg");
 }
+.footer-add{
+  padding-left: 30px;
+  display: inline;
+}
